# telegram_notifications_bot

./: .gitignore  README.md  add_notify.py  add_notify_use_web.py  common.py  config.py  db.py  main.py  pyproject.toml  regexp_patterns.py  requirements.txt  test.py  web_api.py
etc/: run.bat  test_many.py  test_one.py
migrations/: 001.py  002.py  003.py  004.py
src/telegram_notifications_bot/: common.py  db.py
src/telegram_notifications_bot/bot/: main.py  regexp_patterns.py
src/telegram_notifications_bot/migrations/: 001.py  002.py  003.py  004.py
src/telegram_notifications_bot/tools/: add_notify.py  add_notify_use_web.py
src/telegram_notifications_bot/web_api/: main.py
test/: test_one.py
tests/: test_main.py
