[project]
name = "telegram-notifications-bot"
version = "2026.4.15"
description = "Проект для уведомлений через бота телеграм"
requires-python = ">=3.10, <3.11"
dependencies = [
    "aiohttp==3.8.1",
    "peewee==3.14.8",
    "python-telegram-bot==13.9",
    "requests==2.26.0",
    "setuptools<70",
]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE.txt"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
